# openai-chat-app-entra-auth-local

./: .env.sample  .pre-commit-config.yaml  README.md  azure.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/workflows/: azure-dev.yaml  python-check.yaml
docs/: README.md  deploy_existing.md
infra/: aca.bicep  main.bicep  main.parameters.json  secrets.bicep
infra/core/cache/: redis-diagnostics.bicep
scripts/: auth_common.py  auth_init.ps1  auth_init.py  auth_init.sh  auth_update.ps1  auth_update.py  auth_update.sh  load_env.sh  make_dotenv.sh  requirements.txt
src/: Dockerfile  pyproject.toml  requirements.txt
src/quartapp/: __init__.py  auth.py  chat.py
src/quartapp/templates/: base.html  index.html
src/quartapp/templates/identity/: login.html
tests/: conftest.py  mock_cred.py  test_app.py
